hello-ossm-ts-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ossm-ts-v2
  namespace: hello-ossm-ts
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-ossm-ts
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: hello-ossm-ts
        version: v2
    spec:
      containers:
      - env:
        - name: RESPONSE
          value: Hello from V2 - Traffic Splitting
        image: image-registry.openshift-image-registry.svc:5000/hello-ossm-ts/hello-openshift:latest
        name: hello-ossm-ts-v2
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
