hello-ossm-ts-ingressgateway.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
  name: hello-ossm-ts
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  ports:
    - name: status-port
      protocol: TCP
      port: 15021
      targetPort: 15021
    - name: http2
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: tls
      protocol: TCP
      port: 15443
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: ClusterIP
  sessionAffinity: None
