hello-ossm-ts-v1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-ossm-ts-v1
    service: hello-ossm-ts-v1
  name: hello-ossm-ts-v1
  namespace: hello-ossm-ts
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-ossm-ts-v1
  sessionAffinity: None
  type: ClusterIP
