hello-ossm-ts-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-ossm-ts-gw
  namespace: hello-ossm-ts
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - hello-ossm-ts.apps.ocp.example.com
    - hello-ossm-ts-ingressgateway.istio-system.svc
    port:
      name: http
      number: 80
      protocol: HTTP
