hello-ossm-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-ossm-ts-dr
spec:
  host: hello-ossm-ts
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
