hello-ossm-ts-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-ossm-ts-vs
  namespace: hello-ossm-ts
spec:
  gateways:
  #- mesh
  - hello-ossm-ts-gw
  hosts:
  - hello-ossm-ts.apps.ocp.example.com
  - hello-ossm-ts-ingressgateway.istio-system.svc 
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-ossm-ts
        subset: v1
      weight: 20
    - destination:
        host: hello-ossm-ts
        subset: v2
      weight: 80
